fixed overflow issue, improved button styles, smooth scroll

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -40,7 +40,7 @@
 .List {
     /* border: 2px solid rgb(6, 41, 23); */
     padding: 0 1em 0 1em;
-    width: 180px;
+    width: 170px;
     font-size: .8em;
 }
 
