--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -3,6 +3,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    gap: 1.5em;
 
     background-color: rgb(0, 72, 136);
     /* background-image: linear-gradient(
@@ -14,6 +15,9 @@
     height: 40vh;
     color: white;
 
+}
+
+.Contact h1 {
 }
 
 .Contact-Links {
@@ -38,7 +42,7 @@
 
 @keyframes float {
     0% {transform: translateY(-11px) scale(1)}
-    100% {transform: translateY(-15px)scale(1.03); border-bottom: 8px solid rgb(166, 255, 0)}
+    100% {transform: translateY(-15px)scale(1.01); border-bottom: 8px solid rgb(166, 255, 0)}
 }
 
 .Dashes-Yellow {
