--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap'); */
 @import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@600&display=swap');
+
+/* Locally installed fonts */
+@font-face {
+  font-family: 'Balkind';
+  src: local('Balkind'),
+       url('./fonts/balkind-demo.otf') format('opentype');
+}
+
+@font-face {
+  font-family: 'Wingfead';
+  src: local('Wingfead'),
+       url('./fonts/Wingfead-gx4xp.otf') format('opentype');
+}
+
+@font-face {
+  font-family: 'Poppins';
+  src: local('Poppins'),
+       url('./fonts/Poppins-Light.ttf') format('truetype');
+}
 
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
@@ -19,8 +38,6 @@ body {
     sans-serif; */
 
   font-family: 'Poppins';
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 
     background-image: linear-gradient(to bottom left,
       rgb(0, 75, 141),
